# project_2

./: .gitignore  .gitmodules  README.md
src/orb_slam3_ros2/: CMakeLists.txt  package.xml
src/orb_slam3_ros2/config/: semantic_pointcloud_builder.yaml  semantic_rgbd_node.yaml  slam_eval_node.yaml
src/orb_slam3_ros2/docs/: RUN_GUIDE_ZH.md  yolov8_mask_dataflow_migration_note_zh.md
src/orb_slam3_ros2/launch/: semantic_slam.launch.py
src/orb_slam3_ros2/scripts/: slam_eval_node.py
src/orb_slam3_ros2/src/: semantic_pointcloud_builder.cpp  semantic_rgbd_node.cpp
src/yolo_semantic_ros2/: package.xml  setup.cfg  setup.py
src/yolo_semantic_ros2/launch/: yolo_semantic.launch.py
src/yolo_semantic_ros2/yolo_semantic_ros2/: yolo_mask_node.py
